force-app/main/default/objects/UserEngagement__c/UserEngagement__c.object-meta.xml
<CustomObject>
    <description>Tracks user engagement metrics for marketing automation</description>
    <label>User Engagement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>