force-app/main/default/objects/UserEngagement__c/fields/EngagementTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EngagementTimestamp__c</fullName>
    <label>Engagement Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>