force-app/main/default/objects/UserEngagement__c/fields/EngagementType__c.field-meta.xml
<CustomField>
    <fullName>EngagementType__c</fullName>
    <label>Engagement Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>