force-app/main/default/objects/UserEngagement__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserEngagement_User</relationshipName>
    <type>Lookup</type>
</CustomField>